<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_profile"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_profile"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/lastName"
        android:inputType="text"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.82" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="40px"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.205" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/btn_register"
        android:textSize="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.718" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/register_createAcount"
        android:textColor="@color/white"
        android:textSize="50px"
        app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="33dp"
        android:layout_height="19dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>
