<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/twoNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/change_password"
        android:inputType="textPassword"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/twoNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/actualPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/actual_password"
        android:inputType="textPassword"
        android:padding="40px"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/btn_save_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/btn_change_password"
        android:textSize="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />



    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameEdit"
        android:background="#00FFFFFF"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
