<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="131dp"
        android:layout_height="111dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/profile_picture" />

    <ImageButton
        android:id="@+id/edit_profile_picture_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/profile_picture"
        android:layout_alignBottom="@+id/profile_picture"
        android:background="@drawable/btn_new_photo"
        android:padding="8dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@id/edit_profile_picture"
        app:layout_constraintEnd_toEndOf="@id/edit_profile_picture"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_profile"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="Nombre"
        android:inputType="text"
        android:padding="40px"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_profile"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="Apellido"
        android:inputType="text"
        android:padding="40px"
        android:textColorHint="@color/white"
        android:textSize="19sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password"
        android:background="@drawable/input_login"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="40px"
        android:paddingStart="25dp"
        android:textColorHint="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/btn_editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/change_password"
        android:layout_alignTop="@+id/change_password"
        android:layout_alignEnd="@+id/change_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/btn_save_profile"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/change_pass"
        android:textColor="#03A9F4"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameEdit"
        android:layout_alignEnd="@+id/profile_picture"
        android:background="#00FFFFFF"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
